--- a/responsive-nav2-with-jQuery/index.html
+++ b/responsive-nav2-with-jQuery/index.html
@@ -70,7 +70,7 @@
   <h3>More articles about Feng Shui</h3>
   <ul>
     <li><a href="spindex.html">Feng Shui for your Bedroom</a></li>
-    <li><a href="#">Feng Shui for your Kitchen</a></li>
+    <li><a href="grindex.html">Feng Shui for your Kitchen</a></li>
     <li><a href="#">Feng Shui for your Family Room</a></li>
   </ul>
 </aside>
